--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
         <h2>历史悠久</h2>
         <p>河南是华夏文明的重要发祥地之一，拥有着悠久的历史和灿烂的文化。从古老的甲骨文到雄伟的龙门石窟，每一处古迹都诉说着过去的故事。</p>
         <div class="image-container">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/Longmen_Grottoes_1.jpg/800px-Longmen_Grottoes_1.jpg" alt="河南历史古迹">
+            <img src="http://111.7.82.66:8090/wtcp-file/original/20230511/20230511153527531.jpg" alt="河南历史古迹">
         </div>
     </section>
     <section>
         <h2>美食盛宴</h2>
         <p>河南美食丰富多样，烩面、胡辣汤等特色美食让人垂涎欲滴。每一口都能品尝到中原大地的独特风味。</p>
         <div class="image-container">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Hu_La_Tang.jpg/800px-Hu_La_Tang.jpg" alt="河南美食">
+            <img src="http://111.7.82.66:8090/wtcp-file/original/20241031/20241031095207574.jpg" alt="河南美食">
         </div>
     </section>
     <footer>
