--- a/quiz/index.html
+++ b/quiz/index.html
@@ -1,1 +1,218 @@
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>测测你的河南地理 - 河南地理知识挑战</title>
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/quiz.css">
+    <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
+	<script src="../js/gtag.js"></script>
+</head>
+<body>
+    <!-- 导航栏 -->
+    <nav class="navbar">
+        <div class="container navbar-container">
+            <a href="../index.html" class="navbar-logo"></a>
+            <ul class="navbar-menu">
+                <li class="navbar-item"><a href="../index.html" class="navbar-link">首页</a></li>
+                <li class="navbar-item"><a href="../footprint/index.html" class="navbar-link">足迹地图</a></li>
+                <li class="navbar-item"><a href="../challenge/index.html" class="navbar-link">每日挑战</a></li>
+                <li class="navbar-item"><a href="../quiz/index.html" class="navbar-link">地理测验</a></li>
+                <li class="navbar-item"><a href="../maps/index.html" class="navbar-link">河南地图</a></li>
+            </ul>
+        </div>
+    </nav>
 
+    <!-- 页面头部 -->
+    <header class="page-header">
+        <div class="container">
+            <h1 class="page-title">测测你的河南地理</h1>
+            <p class="page-subtitle">通过有趣的测验，全面了解河南地理知识</p>
+        </div>
+    </header>
+
+    <!-- 主体内容 -->
+    <main class="main-content">
+        <div class="container">
+            <!-- 测验类型列表 -->
+            <div class="quiz-categories">
+                <div class="quiz-category">
+                    <h2 class="category-title">河南省测验</h2>
+                    <div class="quiz-list">
+                        <div class="quiz-item">
+                            <a href="henan-general.html" class="quiz-link">
+                                <div class="quiz-image">
+                                    <img src="../images/henan-general.jpg" alt="河南地理通识">
+                                </div>
+                                <div class="quiz-content">
+                                    <h3 class="quiz-title">河南地理通识</h3>
+                                    <p class="quiz-description">测试你对河南省整体地理知识的了解程度</p>
+                                    <div class="quiz-meta">
+                                        <span class="quiz-questions">20题</span>
+                                        <span class="quiz-time">15分钟</span>
+                                        <span class="quiz-difficulty">中等</span>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="quiz-item">
+                            <a href="henan-advanced.html" class="quiz-link">
+                                <div class="quiz-image">
+                                    <img src="../images/henan-advanced.jpg" alt="河南地理进阶">
+                                </div>
+                                <div class="quiz-content">
+                                    <h3 class="quiz-title">河南地理进阶</h3>
+                                    <p class="quiz-description">深入了解河南省的地理特征与人文历史</p>
+                                    <div class="quiz-meta">
+                                        <span class="quiz-questions">30题</span>
+                                        <span class="quiz-time">25分钟</span>
+                                        <span class="quiz-difficulty">困难</span>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="quiz-category">
+                    <h2 class="category-title">城市测验</h2>
+                    <div class="quiz-list">
+                        <div class="quiz-item">
+                            <a href="zhengzhou.html" class="quiz-link">
+                                <div class="quiz-image">
+                                    <img src="../images/zhengzhou.jpg" alt="郑州地理测试">
+                                </div>
+                                <div class="quiz-content">
+                                    <h3 class="quiz-title">郑州地理测试</h3>
+                                    <p class="quiz-description">了解河南省会郑州的地理特点和人文风貌</p>
+                                    <div class="quiz-meta">
+                                        <span class="quiz-questions">15题</span>
+                                        <span class="quiz-time">10分钟</span>
+                                        <span class="quiz-difficulty">简单</span>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="quiz-item">
+                            <a href="luoyang.html" class="quiz-link">
+                                <div class="quiz-image">
+                                    <img src="../images/luoyang.jpg" alt="洛阳地理测试">
+                                </div>
+                                <div class="quiz-content">
+                                    <h3 class="quiz-title">洛阳地理测试</h3>
+                                    <p class="quiz-description">探索古都洛阳的地理环境和历史文化</p>
+                                    <div class="quiz-meta">
+                                        <span class="quiz-questions">15题</span>
+                                        <span class="quiz-time">10分钟</span>
+                                        <span class="quiz-difficulty">简单</span>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="quiz-item">
+                            <a href="nanyang.html" class="quiz-link">
+                                <div class="quiz-image">
+                                    <img src="../images/nanyang.jpg" alt="南阳地理测试">
+                                </div>
+                                <div class="quiz-content">
+                                    <h3 class="quiz-title">南阳地理测试</h3>
+                                    <p class="quiz-description">了解南阳的地理特征和历史变迁</p>
+                                    <div class="quiz-meta">
+                                        <span class="quiz-questions">15题</span>
+                                        <span class="quiz-time">10分钟</span>
+                                        <span class="quiz-difficulty">中等</span>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="quiz-category">
+                    <h2 class="category-title">专题测验</h2>
+                    <div class="quiz-list">
+                        <div class="quiz-item">
+                            <a href="rivers.html" class="quiz-link">
+                                <div class="quiz-image">
+                                    <img src="../images/rivers.jpg" alt="河南水系测试">
+                                </div>
+                                <div class="quiz-content">
+                                    <h3 class="quiz-title">河南水系测试</h3>
+                                    <p class="quiz-description">测试你对河南省主要河流和水系的了解</p>
+                                    <div class="quiz-meta">
+                                        <span class="quiz-questions">20题</span>
+                                        <span class="quiz-time">15分钟</span>
+                                        <span class="quiz-difficulty">中等</span>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="quiz-item">
+                            <a href="mountains.html" class="quiz-link">
+                                <div class="quiz-image">
+                                    <img src="../images/mountains.jpg" alt="河南山地测试">
+                                </div>
+                                <div class="quiz-content">
+                                    <h3 class="quiz-title">河南山地测试</h3>
+                                    <p class="quiz-description">了解河南省主要山脉和地形特点</p>
+                                    <div class="quiz-meta">
+                                        <span class="quiz-questions">15题</span>
+                                        <span class="quiz-time">12分钟</span>
+                                        <span class="quiz-difficulty">中等</span>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+            <!-- 测验统计信息 -->
+            <div class="quiz-stats">
+                <div class="stats-item">
+                    <div class="stats-icon">
+                        <i class="stats-icon-quiz"></i>
+                    </div>
+                    <div class="stats-content">
+                        <div class="stats-number">8</div>
+                        <div class="stats-label">测验种类</div>
+                    </div>
+                </div>
+                <div class="stats-item">
+                    <div class="stats-icon">
+                        <i class="stats-icon-question"></i>
+                    </div>
+                    <div class="stats-content">
+                        <div class="stats-number">150+</div>
+                        <div class="stats-label">测验题目</div>
+                    </div>
+                </div>
+                <div class="stats-item">
+                    <div class="stats-icon">
+                        <i class="stats-icon-user"></i>
+                    </div>
+                    <div class="stats-content">
+                        <div class="stats-number">5000+</div>
+                        <div class="stats-label">参与用户</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <!-- 页脚 -->
+    <footer class="footer">            
+            <div class="footer-bottom">
+                <p>&copy; 2025 河南地理网站 | 豫ICP备2025121906号</p>
+            </div>
+        </div>
+    </footer>
+
+    <script src="../js/main.js"></script>
+</body>
+</html> 
