--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
     <title>地理视角发现河南|河南足迹地图|河南地理挑战|河南地理测验|河南地图</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <script src="js/gtag.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GWGYFDPRNV"></script>
+    <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'G-GWGYFDPRNV');
+    </script>
 </head>
 <body>
     <!-- 导航栏 -->
