--- a/challenge/outline.html
+++ b/challenge/outline.html
@@ -9,7 +9,13 @@
     <link rel="stylesheet" href="../css/challenge.css">
     <link rel="stylesheet" href="../css/outline.css">
     <script src="https://cdn.staticfile.org/echarts/5.4.3/echarts.min.js"></script>
-	<script src="../js/gtag.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GWGYFDPRNV"></script>
+    <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+          gtag('config', 'G-GWGYFDPRNV');
+    </script>
     <style>
         /* 移动端导航栏优化 */
         @media (max-width: 768px) {
