--- a/challenge/index.html
+++ b/challenge/index.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/challenge.css">
     <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
-	<script src="../js/gtag.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GWGYFDPRNV"></script>
+    <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+          gtag('config', 'G-GWGYFDPRNV');
+    </script>
 </head>
 <body>
     <!-- 导航栏 -->
