--- a/footprint/china.html
+++ b/footprint/china.html
@@ -11,7 +11,14 @@
     <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/6.4.2/css/all.min.css">
     <!-- 引入ECharts -->
     <script src="https://cdn.staticfile.org/echarts/5.4.3/echarts.min.js"></script>
-    <script src="../js/gtag.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GWGYFDPRNV"></script>
+    <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+          gtag('config', 'G-GWGYFDPRNV');
+    </script>
 </head>
 <body>
     <nav class="navbar">
