--- a/challenge/outline.html
+++ b/challenge/outline.html
@@ -150,7 +150,7 @@
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-bottom">
-                <p>&copy; 2025 河南地理 | 豫ICP备2025121906号</p>
+                <p>&copy; 2025 河南地理 </p>
             </div>
         </div>
     </footer>
