--- a/quiz/index.html
+++ b/quiz/index.html
@@ -215,7 +215,7 @@
     <!-- 页脚 -->
     <footer class="footer">            
             <div class="footer-bottom">
-                <p>&copy; 2025 河南地理网站 | 豫ICP备2025121906号</p>
+                <p>&copy; 2025 河南地理网站</p>
             </div>
         </div>
     </footer>
